# course_pico_examples

blink/: CMakeLists.txt
doc/: README.md
lwIP_HTTP_client/: CMakeLists.txt
lwIP_HTTP_client/src/: CMakeLists.txt  c_WifiManager.h  main.c
new_tcp_client/: client.c  lwipopts.h
tcp_client/: CMakeLists.txt  README.md  client.c  lwipopts.h  tcp_client.c
tcp_server/: CMakeLists.txt
tcp_server/src/: server.c
uart_control/: CMakeLists.txt  main.c
wifi_scan/: CMakeLists.txt  main.c
wifiscanner/: CMakeLists.txt  main.c
